change the container dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 CDD_API_scripts/github_key.yaml
 CDD_API_scripts/key.yaml
 CDD_API_scripts/__pycache__/util.cpython-39.pyc
+CDD_API_scripts/test.ipynb
+CDD_API_scripts/moe_3.sdf
